# tripodpy

./: .gitignore  .readthedocs.yaml  README.md  changelog.md  meson.build  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: tests.yml
docs/: requirements.txt
docs/source/: 0_algorithm.ipynb  1_basics.ipynb  2_simple_customization.ipynb  3_advanced_customization.ipynb  4_standard_model.ipynb  5_compositional_tracking.ipynb  6_evaporation_condensation.ipynb  Example_disk_composition.ipynb  api.rst  chem.txt  conf.py  index.rst
paper/: paper.bib  paper.md
tests/: DP_DuffellGap.py  DuffellGap.py  Icelines.py  README.md  Smooth.py  test_runner.py
tests/unit/: __init__.py  test_simulation_structure.py  test_size_distribution_standalone.py
tripod/: __init__.py  simulation.py
tripod/plot/: meson.build  plot.py
tripod/std/: __init__.py  addcomponent.py  compo.py  component.py  dust.f90  dust.py  gas.py  meson.build  sim.py
tripod/utils/: __init__.py  meson.build  read_data.py  size_distribution.py
tripod/utils/components/: __init__.py  addcomponent.py  component.py  meson.build
tripodpy/: __init__.py  meson.build  simulation.py
tripodpy/constants/: __init__.py  constants.mod  meson.build
tripodpy/plot/: __init__.py  meson.build  plot.py
tripodpy/std/: __init__.py  addcomponent.py  compo.py  component.py  dust.f90  dust.py  meson.build  sim.py
tripodpy/utils/: __init__.py  meson.build  read_data.py  size_distribution.py
twopoppy/: __init__.py  simulation.py
twopoppy/constants/: __init__.py  constants.f90
twopoppy/plot/: __init__.py  plot.py  plot_comp.py  plot_new.py  read_data.py
twopoppy/std/: __init__.py  dust.f90  dust.py  gas.py  sim.py
twopoppy/utils/: __init__.py
unit_tests/: test_simulation.py
unit_tests/std/: test_addcomponent.py  test_compo.py  test_component.py  test_dust.py  test_gas.py
