[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy']

[project]
name = 'tripodpy'
version = '1.0.0'
description = 'Tri-population method for dust evolution in protoplanetary disks'
readme = { file = 'README.md', content-type = 'text/markdown' }
keywords = [
    "numerical",
    "simulation",
    "science",
    "physics",
    "astrophysics",
    "astronomy",
]
authors = [
    { name = "Nicolas Kaufmann", email = "n.kaufmann@usm.lmu.de" },
    { name = "Thomas Pfeil", email = "tpfeil@usm.lmu.de" },
    { name = "Sebastian Stammler", email = "sebastian.stammler@gmail.com" },
    { name = "Til Birnstiel", email = "til.birnstiel@lmu.de" },
    { name = "Sandro Paetzold" },
]
maintainers = [
    { name = "Nicolas Kaufmann", email = "n.kaufmann@usm.lmu.de" },
    { name = "Sebastian Stammler", email = "sebastian.stammler@gmail.com" },
    { name = "Tilman Birnstiel", email = "til.birnstiel@lmu.de" },
]
license = { text = "GPLv3" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Fortran",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["dustpy"]

[project.urls]
Repository = "https://github.com/tripod-code/tripodpy"
